# ChangeLog for net-mail/getmail
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/getmail/ChangeLog,v 1.233 2014/01/29 04:15:06 radhermit Exp $

*getmail-4.43.0-r1 (29 Jan 2014)

  29 Jan 2014; Tim Harder <radhermit@gentoo.org> +getmail-4.43.0-r1.ebuild:
  Add conditional dep on ssl enabled python (bug #488472).

  27 Sep 2013; Tim Harder <radhermit@gentoo.org> -getmail-4.36.0.ebuild,
  -getmail-4.39.1.ebuild, -getmail-4.40.1.ebuild, -getmail-4.40.3.ebuild:
  Remove old.

*getmail-4.43.0 (27 Sep 2013)

  27 Sep 2013; Tim Harder <radhermit@gentoo.org> +getmail-4.43.0.ebuild:
  Version bump.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> getmail-4.36.0.ebuild,
  getmail-4.39.1.ebuild, getmail-4.40.1.ebuild, getmail-4.40.3.ebuild,
  getmail-4.41.0.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  27 Jul 2013; Agostino Sarubbo <ago@gentoo.org> getmail-4.41.0.ebuild:
  Stable for x86, wrt bug #477576

  22 Jul 2013; Agostino Sarubbo <ago@gentoo.org> getmail-4.41.0.ebuild:
  Stable for ppc, wrt bug #477576

  21 Jul 2013; Agostino Sarubbo <ago@gentoo.org> getmail-4.41.0.ebuild:
  Stable for amd64, wrt bug #477576

*getmail-4.41.0 (29 May 2013)

  29 May 2013; Tim Harder <radhermit@gentoo.org> +getmail-4.41.0.ebuild:
  Version bump.

*getmail-4.40.3 (11 May 2013)

  11 May 2013; Tim Harder <radhermit@gentoo.org> +getmail-4.40.3.ebuild:
  Version bump.

  02 May 2013; Tim Harder <radhermit@gentoo.org> -getmail-4.37.0.ebuild,
  -getmail-4.39.0.ebuild:
  Remove old.

*getmail-4.40.1 (02 May 2013)

  02 May 2013; Tim Harder <radhermit@gentoo.org> +getmail-4.40.1.ebuild:
  Version bump.

*getmail-4.39.1 (12 Mar 2013)

  12 Mar 2013; Tim Harder <radhermit@gentoo.org> +getmail-4.39.1.ebuild:
  Version bump.

  25 Feb 2013; Tim Harder <radhermit@gentoo.org> -getmail-4.24.0.ebuild,
  -getmail-4.35.0.ebuild:
  Remove old.

*getmail-4.39.0 (25 Feb 2013)
