@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=userland_GNU? ( >=sys-apps/coreutils-8.5 ) python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6[ssl?] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[ssl?] ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)]
+DESCRIPTION=A POP3 mail retriever with reliable Maildir and mbox delivery
+EAPI=5
+HOMEPAGE=http://pyropus.ca/software/getmail/
+IUSE=ssl python_targets_python2_6 python_targets_python2_7
+KEYWORDS=~amd64 ~ppc ~x86 ~ppc-macos ~x86-macos ~x64-solaris
+LICENSE=GPL-2
+RDEPEND=python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6[ssl?] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[ssl?] ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)]
+REQUIRED_USE=|| ( python_targets_python2_6 python_targets_python2_7 )
+SLOT=4
+SRC_URI=http://pyropus.ca/software/getmail/old-versions/getmail-4.46.0.tar.gz
+_eclasses_=distutils-r1	364122897f9dc771167ee5ff362e54e1	eutils	af81d52c25ec93fbdff71e0efb0de7b7	multibuild	576bde67ccb00fe7175a23755deb2e66	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-r1	f6a00e248ffeb4404b67a7a7645446c5	python-utils-r1	30d5d7986d3f80d0f2c2726366426859	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=0ecf70246ee7fcabd925e5f7eca7884f
