@@ -1,0 +1,25 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-mail/getmail/getmail-4.46.0.ebuild,v 1.1 2014/04/18 00:18:43 radhermit Exp $
+
+EAPI=5
+PYTHON_COMPAT=( python{2_6,2_7} )
+PYTHON_REQ_USE="ssl?"
+
+inherit distutils-r1
+
+DESCRIPTION="A POP3 mail retriever with reliable Maildir and mbox delivery"
+HOMEPAGE="http://pyropus.ca/software/getmail/"
+SRC_URI="http://pyropus.ca/software/getmail/old-versions/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="4"
+KEYWORDS="~amd64 ~ppc ~x86 ~ppc-macos ~x86-macos ~x64-solaris"
+IUSE="ssl"
+
+python_prepare_all() {
+	sed -i -e "s,'getmail-%s' % __version__,'${PF}'," \
+		-e "/docs\/COPYING/d" "${S}"/setup.py || die
+
+	distutils-r1_python_prepare_all
+}
